[project]
name = "streaming_benchmark"
version = "0.1.0"
description = "Benchmark end-to-end latency of a stream processing pipeline using Kafka"
readme = "README.md"
requires-python = ">=3.8.10"
dependencies = [
    "dbldatagen>=0.4.0.post1",
    "pyspark[connect]==3.5.1",
    "jmespath>=1.0.1",
    "pyparsing>=3.1.4",
    "typer>=0.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "mkdocs-material>=9.5.34",
    "isort>=5.13.2",
    "mkdocstrings[python]>=0.26.1",
]

[project.scripts]
simple_data_gen = "streaming_benchmark.generators.simple_data_gen:app"
iceberg_stream_read = "streaming_benchmark.pipelines.iceberg.iceberg_stream_read:app"
iceberg_stream_write = "streaming_benchmark.pipelines.iceberg.iceberg_stream_write:app"
